--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
+        "@vue/test-utils": "^2.4.4",
         "axios": "^1.6.7",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.1.5"
