--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "bootstrap": "^5.3.3",
+    "vite": "^5.1.5",
+    "vue": "^3.4.21",
+    "vue-loader": "^17.4.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
     "axios": "^1.6.7",
-    "laravel-vite-plugin": "^1.0.0",
-    "vite": "^5.1.5"
+    "laravel-vite-plugin": "^1.0.0"
   }
 }
