--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "axios-mock-adapter": "^1.22.0",
     "bootstrap": "^5.3.3",
     "vite": "^5.1.5",
     "vue": "^3.4.21",
